feat(web): create project detail page, bugfixes, remove openspec
